Fixed English words
svn path=/trunk/kdeextragear-libs-1/doc/kipi-plugins/; revision=383815

--- a/borderimages.docbook
+++ b/borderimages.docbook
@@ -16,7 +16,7 @@
 <releaseinfo>0.1</releaseinfo>
 <abstract>
 <para>
-The Kipi border images plugin is a tool for to add border arround the images.
+The Kipi border images plugin is a tool to add borders arround the images.
 </para>
 </abstract>
 
@@ -30,20 +30,20 @@ The Kipi border images plugin is a tool for to add border arround the images.
 
 <para>
 
-This plugin can be used for batch border images in an Album.
- It use "convert" program from "ImageMagick" package. An image effect
+This plugin can be used for batch conversion of image borders in an Album.
+ It uses the "convert" program from "ImageMagick" package. An image effect
  preview is available. Actually, 4 border styles have been implemented:
 </para>
 
 <itemizedlist>
 <listitem><para><emphasis>Solid</emphasis> : simple line.</para></listitem>
 <listitem><para><emphasis>Niepce</emphasis> : old border style for black and white pictures.</para></listitem>
-<listitem><para><emphasis>Raise</emphasis> : a 3D effect arroud pictures.</para></listitem>
-<listitem><para><emphasis>Frame</emphasis> : surround the images with an ornamental border.</para></listitem>
+<listitem><para><emphasis>Raise</emphasis> : a 3D effect arround pictures.</para></listitem>
+<listitem><para><emphasis>Frame</emphasis> : frame the images with an ornamental border.</para></listitem>
 </itemizedlist>
 
 <para>
-You can see some samples building with this plugin at this
+You can see some samples built with this plugin at this
 <ulink url="http://digikamplugins.free.fr/ImagesGallerySamples/MultipleAlbums/BorderImages/index.html">
 <citetitle>url.</citetitle>
 </ulink></para>
