--- a/imagesgallery.docbook
+++ b/imagesgallery.docbook
@@ -11,12 +11,18 @@
 <address><email>caulier dot gilles at free.fr</email></address>
 </affiliation>
 </author>
+    
+    <author>
+        <firstname>Gerhard</firstname><surname>Kulzer</surname>
+        <affiliation><address><email>gerhard at kulzer.net</email></address></affiliation>
+    </author>
+    
 </authorgroup>
 <date>2004-06-20</date>
 <releaseinfo>0.1</releaseinfo>
 <abstract>
 <para>
-The Kipi images gallery plugin is a tool for to export an Albums list to an HTML page.
+The Kipi images gallery plugin is a tool for exporting a set of Albums to an HTML page.
 </para>
 </abstract>
 
@@ -29,9 +35,8 @@ The Kipi images gallery plugin is a tool for to export an Albums list to an HTML
 <title>Introduction</title>
 
 <para>
-This plugin can export the Albums in HTML page for a WEB publication.
-You can select easily the Albums to export in an HTML page. You can set a big parameters list
-the HTML rendering. The UTF-8 encoding is used for a best internationalization.
+This powerful plugin can export your Albums into a HTML page for web publication in the form of an image gallery.
+You can easily select the Albums to export in an HTML page and set a big parameters list for the HTML rendering. UTF-8 encoding is used for a best internationalization.
 </para>
 <para>
 You can see some samples building with this plugin at this
@@ -39,6 +44,27 @@ You can see some samples building with this plugin at this
 <citetitle>url.</citetitle>
 </ulink>
 </para>
+
+<sect1 id="using-plugin-imagesgallery">
+<title>Using the plugin</title>
+
+<para>
+The plugin has four tabs to adapt the settings.
+The <guilable>Selection</guilable> tab allows you to select all Albums you want to export to HTML. Just check the respective Albums (they are displayed without hierarchcal nesting). The three buttons to the right help to quickly select large amounts of Albums. The little window below shows the Album ID-picture with the text that will appear as a header of the HTML page.
+
+The <guilable>Look</guilable> tab defines the general look and layout of each page. This tab is largely self-explanatory. The <guilable>Create pages for each image</guilable> check box will create a HTML page per image, that is, if you click onto an image a new page will open showing the image within the web browser. If you leave this box unchecked clicking the images will directly open them with the default image viewer, e.g. Kuickshow.
+
+The <guilable>Album</guilable> tab defines the settings of where and how to store the gallery with all its associated images. Select a folder with write access where you want the gallery to be written to. A sub-folder named KIPIHTMLExport will be created containing everything.
+When you check the <guilable>Resize target images</guilable> box you can fix the maximum target image size (in pixels) with the slider below it. Images bigger than this value will be scaled down to it, smaller images will not be modified.
+The next two check boxes allow you to set specific image compression features. If disk space is of concern check the target image compression and lower the compression level from the host application default value. Then you can choose between JPEG (smallest filesize, but lossy) and PNG (lossless and free license) formats.
+With the <guilable>Set different color depth</guilable> check box you can change the default color depth. This will of course influence the filesize.
+
+The rest of the setting are rather self-explanatory.
+
+The <guilable>Thumbnails</guilable> tab allows to set some of the  <guilable>Album</guilable> tab settings for the thumbnails (that are the small images shown in the gallery).
+</para>
+
+</sect1>
 
 </chapter>
 
