--- a/imagesgallery.docbook
+++ b/imagesgallery.docbook
@@ -50,9 +50,9 @@ You can see some samples building with this plugin at this
 
 <para>
 The plugin has four tabs to adapt the settings.
-The <guilable>Selection</guilable> tab allows you to select all Albums you want to export to HTML. Just check the respective Albums (they are displayed without hierarchcal nesting). The three buttons to the right help to quickly select large amounts of Albums. The little window below shows the Album ID-picture with the text that will appear as a header of the HTML page.
+The <guilable>Selection</guilable> tab allows you to select all Albums you want to export to HTML. Just check the respective Albums (they are displayed without hierarchical nesting). The three buttons to the right help to quickly select large amounts of Albums. The frame below shows the Album ID-picture with the text that will appear as a header of the HTML page.
 
-The <guilable>Look</guilable> tab defines the general look and layout of each page. This tab is largely self-explanatory. The <guilable>Create pages for each image</guilable> check box will create a HTML page per image, that is, if you click onto an image a new page will open showing the image within the web browser. If you leave this box unchecked clicking the images will directly open them with the default image viewer, e.g. Kuickshow.
+The <guilable>Look</guilable> tab defines the general look and layout of each page. This tab is largely self-explanatory. The <guilable>Create pages for each image</guilable> check box will create a gallery with a HTML page per image, that is, if you click onto an image a new page will open showing the image within the web browser. If you leave this box unchecked clicking the images will directly open them with the default image viewer, e.g. Kuickshow.
 
 The <guilable>Album</guilable> tab defines the settings of where and how to store the gallery with all its associated images. Select a folder with write access where you want the gallery to be written to. A sub-folder named KIPIHTMLExport will be created containing everything.
 When you check the <guilable>Resize target images</guilable> box you can fix the maximum target image size (in pixels) with the slider below it. Images bigger than this value will be scaled down to it, smaller images will not be modified.
