--- a/imagesgallery.docbook
+++ b/imagesgallery.docbook
@@ -4,22 +4,19 @@
 <title>Images Gallery</title>
 
 <authorgroup>
-<author>
-<firstname>Gilles</firstname>
-<surname>Caulier</surname>
-<affiliation>
-<address><email>caulier dot gilles at free.fr</email></address>
-</affiliation>
-</author>
+    <author>
+        <firstname>Gilles</firstname><surname>Caulier</surname>
+        <affiliation><address><email>caulier dot gilles at free.fr</email></address></affiliation>
+    </author>
     
     <author>
         <firstname>Gerhard</firstname><surname>Kulzer</surname>
         <affiliation><address><email>gerhard at kulzer.net</email></address></affiliation>
     </author>
-    
 </authorgroup>
-<date>2004-06-20</date>
-<releaseinfo>0.1</releaseinfo>
+
+<date>2005-xx-xx</date>
+<releaseinfo>0.1.0</releaseinfo>
 <abstract>
 <para>
 The Kipi images gallery plugin is a tool for exporting a set of Albums to an HTML page.
@@ -35,34 +32,118 @@ The Kipi images gallery plugin is a tool for exporting a set of Albums to an HTM
 <title>Introduction</title>
 
 <para>
-This powerful plugin can export your Albums into a HTML page for web publication in the form of an image gallery.
-You can easily select the Albums to export in an HTML page and set a big parameters list for the HTML rendering. UTF-8 encoding is used for a best internationalization.
-</para>
-<para>
-You can see some samples building with this plugin at this
-<ulink url="http://digikamplugins.free.fr/ImagesGallerySamples/MultipleAlbums/index.htm">
-<citetitle>url.</citetitle>
-</ulink>
+This powerful plugin can export your Albums into a HTML page compliant to 4.01 version for web publication in the form of an image gallery. You can easily select the Albums to export in an HTML page and set a big parameters list for the HTML rendering. UTF-8 encoding is used for a best internationalization.
 </para>
 
-<sect1 id="using-plugin-imagesgallery">
-<title>Using the plugin</title>
+<para>
+You can see some samples building with this plugin at this 
+<ulink url="http://digikamplugins.free.fr/ImagesGallerySamples/MultipleAlbums/index.htm"><citetitle>url.</citetitle></ulink>
+</para>
+
+<sect1 id="using-plugin-imagesgallerycollectionselection">
+<title>Collections Selection Dialog</title>
 
 <para>
 The plugin has four tabs to adapt the settings.
-The <guilable>Selection</guilable> tab allows you to select all Albums you want to export to HTML. Just check the respective Albums (they are displayed without hierarchical nesting). The three buttons to the right help to quickly select large amounts of Albums. The frame below shows the Album ID-picture with the text that will appear as a header of the HTML page.
-
-The <guilable>Look</guilable> tab defines the general look and layout of each page. This tab is largely self-explanatory. The <guilable>Create pages for each image</guilable> check box will create a gallery with a HTML page per image, that is, if you click onto an image a new page will open showing the image within the web browser. If you leave this box unchecked clicking the images will directly open them with the default image viewer, e.g. Kuickshow.
-
-The <guilable>Album</guilable> tab defines the settings of where and how to store the gallery with all its associated images. Select a folder with write access where you want the gallery to be written to. A sub-folder named KIPIHTMLExport will be created containing everything.
-When you check the <guilable>Resize target images</guilable> box you can fix the maximum target image size (in pixels) with the slider below it. Images bigger than this value will be scaled down to it, smaller images will not be modified.
-The next two check boxes allow you to set specific image compression features. If disk space is of concern check the target image compression and lower the compression level from the host application default value. Then you can choose between JPEG (smallest filesize, but lossy) and PNG (lossless and free license) formats.
-With the <guilable>Set different color depth</guilable> check box you can change the default color depth. This will of course influence the filesize.
-
-The rest of the setting are rather self-explanatory.
-
-The <guilable>Thumbnails</guilable> tab allows to set some of the  <guilable>Album</guilable> tab settings for the thumbnails (that are the small images shown in the gallery).
+The <guilabel>Selection</guilabel> tab allows you to select all Albums you want to export to HTML. Just check the respective Albums (they are displayed without hierarchical nesting). The three buttons to the right help to quickly select large amounts of Albums. The frame below shows the Album ID-picture with the text that will appear as a header of the HTML page.
 </para>
+
+<screenshot>
+    <mediaobject>
+        <imageobject><imagedata fileref="imagegallery_collectionselection.png" format="PNG"/></imageobject>
+        <textobject><phrase>The Collections Selection Dialog</phrase></textobject>
+    </mediaobject>
+</screenshot>
+
+</sect1>
+
+<sect1 id="using-plugin-imagesgallerylooksettings">
+<title>Look Settings Dialog</title>
+
+<para>
+The <guilabel>Look</guilabel> tab defines the general look and layout of each page. This tab is largely self-explanatory. The <guilabel>Create pages for each image</guilabel> check box will create a gallery with a HTML page per image, that is, if you click onto an image a new page will open showing the image within the web browser. If you leave this box unchecked clicking the images will directly open them with the default image viewer, e.g. Kuickshow.
+</para>
+
+<screenshot>
+    <mediaobject>
+        <imageobject><imagedata fileref="imagegallery_looksettings.png" format="PNG"/></imageobject>
+        <textobject><phrase>The Look Settings Dialog</phrase></textobject>
+    </mediaobject>
+</screenshot>
+
+</sect1>
+
+<sect1 id="using-plugin-imagesgalleryalbumsettings">
+<title>Album Settings Dialog</title>
+
+<para>
+The <guilabel>Album</guilabel> tab defines the settings of where and how to store the gallery with all its associated images. Select a folder with write access where you want the gallery to be written to. A sub-folder named KIPIHTMLExport will be created containing everything.
+</para>
+
+<para>
+When you check the <guilabel>Resize target images</guilabel> box you can fix the maximum target image size (in pixels) with the slider below it. Images bigger than this value will be scaled down to it, smaller images will not be modified.
+The next two check boxes allow you to set specific image compression features. If disk space is of concern check the target image compression and lower the compression level from the host application default value. Then you can choose between JPEG (smallest filesize, but lossy) and PNG (lossless and free license) formats.
+</para>
+
+<note><para>
+If JPEG file format is selected for target resizing images, all EXIF informations will be preserved from original JPEG files.
+</para></note>
+
+<para>
+With the <guilabel>Set different color depth</guilabel> check box you can change the default color depth. This will of course influence the filesize. The rest of the setting are rather self-explanatory.
+</para>
+
+<screenshot>
+    <mediaobject>
+        <imageobject><imagedata fileref="imagegallery_albumsettings.png" format="PNG"/></imageobject>
+        <textobject><phrase>The Album Settings Dialog</phrase></textobject>
+    </mediaobject>
+</screenshot>
+
+</sect1>
+
+<sect1 id="using-plugin-imagesgallerythumbsettings">
+<title>Thumbnails Settings Dialog</title>
+
+<para>
+The <guilabel>Thumbnails</guilabel> tab allows to set some of the  <guilabel>Album</guilabel> tab settings for the thumbnails (that are the small images shown in the gallery).
+</para>
+
+<screenshot>
+    <mediaobject>
+        <imageobject><imagedata fileref="imagegallery_thumbsettings.png" format="PNG"/></imageobject>
+        <textobject><phrase>The Thumbnails Settings Dialog</phrase></textobject>
+    </mediaobject>
+</screenshot>
+
+</sect1>
+
+<sect1 id="using-plugin-imagesgalleryinaction">
+<title>Images Gallery in Action</title>
+
+<para>
+A progress dialog giving a feedback indicate to user. Press <guilabel>Cancel</guilabel> button during this stage 
+if you want abort the process.
+</para>
+
+<screenshot>
+    <mediaobject>
+        <imageobject><imagedata fileref="imagegallery_progress.png" format="PNG"/></imageobject>
+        <textobject><phrase>The Images Gallery Plugin in Action</phrase></textobject>
+    </mediaobject>
+</screenshot>
+
+<para>
+When all jobs are completed, this dialog will not closed automaticly and user can consult the progress messages 
+if any errors occurs durring this stage. The web browser will be started automaticly at end to display a gallery preview. Press <guilabel>Close</guilabel> button to close dialog.
+</para>
+
+<screenshot>
+    <mediaobject>
+        <imageobject><imagedata fileref="imagegallery_preview.png" format="PNG"/></imageobject>
+        <textobject><phrase>The Images Gallery Preview in Konqueror</phrase></textobject>
+    </mediaobject>
+</screenshot>
 
 </sect1>
 
