--- a/sendimages.docbook
+++ b/sendimages.docbook
@@ -15,8 +15,8 @@
     </author>
 </authorgroup>
 
-<date>2004-12-xx</date>
-<releaseinfo>0.1</releaseinfo>
+<date>2005-xx-xx</date>
+<releaseinfo>0.1.0</releaseinfo>
 
 <abstract>
 <para>
