--- a/kameraklient.docbook
+++ b/kameraklient.docbook
@@ -3,24 +3,22 @@
 
 <title>Digital Camera Client</title>
 
-<!--
 <authorgroup>
-<author>
-<firstname> </firstname>
-<surname> </surname>
-<affiliation>
-<address><email> </email></address>
-</affiliation>
-</author>
+    <author>
+        <firstname>Gilles</firstname><surname>Caulier</surname>
+        <affiliation><address><email>caulier dot gilles at free.fr</email></address></affiliation>
+    </author>
 </authorgroup>
-<date>2004-06-20</date>
-<releaseinfo>0.1</releaseinfo>
+
+<date>2005-xx-x</date>
+<releaseinfo>0.1.0</releaseinfo>
+
 <abstract>
 <para>
-Note about open header
+The Kipi Camera Client plugin is a tool to connect your computer to a digital camera.
 </para>
 </abstract>
--->
+
 <keywordset>
 <keyword>KDE</keyword>
 <keyword>Kipi</keyword>
