--- a/colorimages.docbook
+++ b/colorimages.docbook
@@ -4,19 +4,18 @@
 <title>Color Images</title>
 
 <authorgroup>
-<author>
-<firstname>Gilles</firstname>
-<surname>Caulier</surname>
-<affiliation>
-<address><email>caulier dot gilles at free.fr</email></address>
-</affiliation>
-</author>
+    <author>
+        <firstname>Gilles</firstname><surname>Caulier</surname>
+        <affiliation><address><email>caulier dot gilles at free.fr</email></address></affiliation>
+    </author>
 </authorgroup>
-<date>2004-06-20</date>
-<releaseinfo>0.1</releaseinfo>
+
+<date>2005-xx-x</date>
+<releaseinfo>0.1.0</releaseinfo>
+
 <abstract>
 <para>
-The Kipi color images plugin is a tool to change or improve the images' color rendering.
+The Kipi Color Images plugin is a tool to change or improve the images' color rendering.
 </para>
 </abstract>
 
