--- a/index.docbook
+++ b/index.docbook
@@ -1,7 +1,7 @@
 <?xml version="1.0" ?>
-<!DOCTYPE book PUBLIC "-//KDE//DTD DocBook XML V4.2-Based Variant V1.1//EN"
-"dtd/kdex.dtd" [
+<!DOCTYPE book PUBLIC "-//KDE//DTD DocBook XML V4.1.2-Based Variant V1.0//EN" "dtd/kdex.dtd" [
  <!ENTITY kappname "&kipi;">
+ <!ENTITY % English "INCLUDE" > <!-- change language only here -->
  <!ENTITY doc-acquireimages SYSTEM "acquireimages.docbook">
  <!ENTITY doc-borderimages SYSTEM "borderimages.docbook">
  <!ENTITY doc-calendar SYSTEM "calendar.docbook">
@@ -25,7 +25,6 @@
  <!ENTITY doc-slideshow SYSTEM "slideshow.docbook">
  <!ENTITY doc-timeadjust SYSTEM "timeadjust.docbook">
  <!ENTITY doc-wallpaper SYSTEM "wallpaper.docbook">
- <!ENTITY % English "INCLUDE" > <!-- change language only here -->
 ]>
 
 <book lang="&language;">
@@ -46,11 +45,11 @@
 
 <!-- TRANS:ROLES_OF_TRANSLATORS -->
 
-<date>2004-12-xx</date>
-<releaseinfo>0.1</releaseinfo> <!-- Used Kicker version here -->
+<date>2005-xx-xx</date>
+<releaseinfo>0.1.0</releaseinfo> <!-- Used Kicker version here -->
 
 <copyright>
-<year>2004</year>
+<year>2004-2005</year>
 <holder>The Kipi developers team</holder>
 </copyright>
 
